<?xml version="1.0"?>
<package format="2">
    <name>iris</name>
    <version>0.0.0</version>
    <description>The ROS package for Iris</description>

    <maintainer email="kento.yabuuchi@tier4.jp">Kento Yabuuchi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>

    <exec_depend>image_transport</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>